<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shoeStoreNavigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.authentication.LoginFragment"
        android:label="@string/fragment_login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.onboarding.WelcomeFragment"
        android:label="@string/fragment_welcome_title"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.screens.onboarding.InstructionFragment"
        android:label="@string/fragment_instructions_title"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_shoeList"
            app:destination="@id/shoeList" />
    </fragment>
    <fragment
        android:id="@+id/shoeList"
        android:name="com.udacity.shoestore.screens.products.shoelist.ShoeListFragment"
        android:label="Shoe List"
        tools:layout="@layout/fragment_shoe_list" />
</navigation>